<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margen"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBuscador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscador"
        android:textSize="@dimen/textSize"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btnFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:layout_marginTop="@dimen/margen"
        app:layout_constraintTop_toBottomOf="@+id/tvBuscador"/>

    <LinearLayout
        android:id="@+id/llFiltros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/btnFiltro">

    <TextView
        android:id="@+id/tvFiltroLat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSizeNor"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/tvFiltroLon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSizeNor"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/tvFiltroDis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSizeNor"
        android:layout_weight="1"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnConsulta"
        android:layout_marginBottom="@dimen/margen"
        android:layout_marginTop="@dimen/margen"
        app:layout_constraintTop_toBottomOf="@+id/llFiltros">

    </FrameLayout>

    <Button
        android:id="@+id/btnConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consulta"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>